--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -1379,6 +1379,10 @@ video {
   width: 81%;
 }
 
+.w-\[85\%\] {
+  width: 85%;
+}
+
 .w-\[87\%\] {
   width: 87%;
 }
@@ -1393,10 +1397,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[85\%\] {
-  width: 85%;
 }
 
 .min-w-\[41\.0256410256vw\] {
@@ -1973,16 +1973,16 @@ video {
   row-gap: 4vw;
 }
 
+.gap-y-\[6\.3846153846vw\] {
+  row-gap: 6.3846153846vw;
+}
+
 .gap-y-\[6vw\] {
   row-gap: 6vw;
 }
 
 .gap-y-\[8\.3846153846vw\] {
   row-gap: 8.3846153846vw;
-}
-
-.gap-y-\[6\.3846153846vw\] {
-  row-gap: 6.3846153846vw;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2289,6 +2289,10 @@ video {
   border-radius: 12px;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -2592,6 +2596,11 @@ video {
   padding-right: 6.15384615385vw;
 }
 
+.px-\[8vw\] {
+  padding-left: 8vw;
+  padding-right: 8vw;
+}
+
 .py-\[10vw\] {
   padding-top: 10vw;
   padding-bottom: 10vw;
@@ -2602,22 +2611,16 @@ video {
   padding-bottom: 8vw;
 }
 
-.px-\[1vw\] {
-  padding-left: 1vw;
-  padding-right: 1vw;
-}
-
-.px-\[8vw\] {
-  padding-left: 8vw;
-  padding-right: 8vw;
-}
-
 .pb-\[10vw\] {
   padding-bottom: 10vw;
 }
 
 .pb-\[12vw\] {
   padding-bottom: 12vw;
+}
+
+.pb-\[15vw\] {
+  padding-bottom: 15vw;
 }
 
 .pb-\[2vw\] {
@@ -2650,10 +2653,6 @@ video {
 
 .pt-\[30vw\] {
   padding-top: 30vw;
-}
-
-.pb-\[15vw\] {
-  padding-bottom: 15vw;
 }
 
 .pt-\[35vw\] {
@@ -2847,10 +2846,6 @@ video {
 .text-\[\#FFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[18181B\] {
-  color: 18181B;
 }
 
 .text-blue-500 {
@@ -3503,6 +3498,10 @@ header {
     row-gap: 0.65104166666vw;
   }
 
+  .sm\:gap-y-\[2\.4166666667vw\] {
+    row-gap: 2.4166666667vw;
+  }
+
   .sm\:gap-y-\[2vw\] {
     row-gap: 2vw;
   }
@@ -3523,10 +3522,6 @@ header {
     row-gap: 8vw;
   }
 
-  .sm\:gap-y-\[2\.4166666667vw\] {
-    row-gap: 2.4166666667vw;
-  }
-
   .sm\:p-\[30px\] {
     padding: 30px;
   }
@@ -3538,6 +3533,11 @@ header {
   .sm\:px-\[3\.90625vw\] {
     padding-left: 3.90625vw;
     padding-right: 3.90625vw;
+  }
+
+  .sm\:px-\[4vw\] {
+    padding-left: 4vw;
+    padding-right: 4vw;
   }
 
   .sm\:px-\[6\%\] {
@@ -3560,18 +3560,12 @@ header {
     padding-bottom: 6vw;
   }
 
-  .sm\:px-\[1vw\] {
-    padding-left: 1vw;
-    padding-right: 1vw;
-  }
-
-  .sm\:px-\[4vw\] {
-    padding-left: 4vw;
-    padding-right: 4vw;
-  }
-
   .sm\:pb-\[10vw\] {
     padding-bottom: 10vw;
+  }
+
+  .sm\:pb-\[15vw\] {
+    padding-bottom: 15vw;
   }
 
   .sm\:pb-\[2vw\] {
@@ -3602,6 +3596,10 @@ header {
     padding-top: 24vw;
   }
 
+  .sm\:pt-\[28vw\] {
+    padding-top: 28vw;
+  }
+
   .sm\:pt-\[40vw\] {
     padding-top: 40vw;
   }
@@ -3614,20 +3612,12 @@ header {
     padding-top: 8.4166666667vw;
   }
 
-  .sm\:pb-\[15vw\] {
-    padding-bottom: 15vw;
-  }
-
-  .sm\:pt-\[28vw\] {
-    padding-top: 28vw;
+  .sm\:text-\[3\.604167vw\] {
+    font-size: 3.604167vw;
   }
 
   .sm\:text-\[4\.94791666667vw\] {
     font-size: 4.94791666667vw;
-  }
-
-  .sm\:text-\[3\.604167vw\] {
-    font-size: 3.604167vw;
   }
 
   .sm\:leading-\[3\.64583333333vw\] {
@@ -3810,6 +3800,10 @@ header {
     width: 59.42%;
   }
 
+  .lg\:w-\[62\.2395833333vw\] {
+    width: 62.2395833333vw;
+  }
+
   .lg\:w-\[71\.3541666667vw\] {
     width: 71.3541666667vw;
   }
@@ -3844,10 +3838,6 @@ header {
 
   .lg\:w-\[unset\] {
     width: unset;
-  }
-
-  .lg\:w-\[62\.2395833333vw\] {
-    width: 62.2395833333vw;
   }
 
   .lg\:min-w-\[17\.2916666667vw\] {
@@ -3904,6 +3894,10 @@ header {
     row-gap: 0.36458333333vw;
   }
 
+  .lg\:gap-y-\[1\.66666666667vw\] {
+    row-gap: 1.66666666667vw;
+  }
+
   .lg\:gap-y-\[2\.08333333333vw\] {
     row-gap: 2.08333333333vw;
   }
@@ -3912,16 +3906,8 @@ header {
     row-gap: 2.34375vw;
   }
 
-  .lg\:gap-y-\[1\.66666666667vw\] {
-    row-gap: 1.66666666667vw;
-  }
-
   .lg\:rounded-\[0\.625vw\] {
     border-radius: 0.625vw;
-  }
-
-  .lg\:rounded-\[4\.16666666667vw\] {
-    border-radius: 4.16666666667vw;
   }
 
   .lg\:rounded-\[5\.05208333333vw\] {
@@ -3930,6 +3916,11 @@ header {
 
   .lg\:p-\[3\.64583333333vw\] {
     padding: 3.64583333333vw;
+  }
+
+  .lg\:px-\[1\.5vw\] {
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
   }
 
   .lg\:px-\[1\.82291666667vw\] {
@@ -3982,16 +3973,6 @@ header {
     padding-bottom: 3.125vw;
   }
 
-  .lg\:px-\[2vw\] {
-    padding-left: 2vw;
-    padding-right: 2vw;
-  }
-
-  .lg\:px-\[1\.5vw\] {
-    padding-left: 1.5vw;
-    padding-right: 1.5vw;
-  }
-
   .lg\:pb-\[0\.72916666666vw\] {
     padding-bottom: 0.72916666666vw;
   }
@@ -4020,6 +4001,10 @@ header {
     padding-bottom: 8.02083333333vw;
   }
 
+  .lg\:pb-\[8\.28125vw\] {
+    padding-bottom: 8.28125vw;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
@@ -4034,6 +4019,10 @@ header {
 
   .lg\:pt-\[13\.0208333333vw\] {
     padding-top: 13.0208333333vw;
+  }
+
+  .lg\:pt-\[14\.4270833333vw\] {
+    padding-top: 14.4270833333vw;
   }
 
   .lg\:pt-\[2\.34375vw\] {
@@ -4064,20 +4053,12 @@ header {
     padding-top: 6.51041666667vw;
   }
 
-  .lg\:pt-\[14\.4270833333vw\] {
-    padding-top: 14.4270833333vw;
-  }
-
-  .lg\:pb-\[8\.28125vw\] {
-    padding-bottom: 8.28125vw;
+  .lg\:text-\[1\.82291666667vw\] {
+    font-size: 1.82291666667vw;
   }
 
   .lg\:text-\[2\.86458333333vw\] {
     font-size: 2.86458333333vw;
-  }
-
-  .lg\:text-\[1\.82291666667vw\] {
-    font-size: 1.82291666667vw;
   }
 
   .lg\:leading-\[1\.5625vw\] {
@@ -4098,14 +4079,6 @@ header {
 
   .lg\:leading-\[3\.125vw\] {
     line-height: 3.125vw;
-  }
-
-  .lg\:leading-\[vw\] {
-    line-height: vw;
-  }
-
-  .lg\:text-\[1\.82291666667vwvw\] {
-    color: 1.82291666667vwvw;
   }
 }
 
