--- a/assets/styles/input.css
+++ b/assets/styles/input.css
@@ -150,6 +150,20 @@ header {
   box-shadow: 0px 5.06px 55.66px 0px rgba(0, 0, 0, 0.1);
   padding: 0.625vw;
 }
+.stickyHeader {
+  position: fixed;
+  top: -7vw;
+  z-index: 5;
+  box-shadow: 0px 5.06px 55.66px 0px rgba(0, 0, 0, 0.1);
+  padding-top: 1vw;
+  padding-bottom: 1vw;
+}
+.stickyHeaderTransition {
+  transition: 0.5s;
+}
+.stickyHeaderShow {
+  top: 0;
+}
 
 @media (max-width: 1024px) {
   .featuresCard {
@@ -177,7 +191,7 @@ header {
     top: 50%;
   }
   .sideBar ul li {
-    border-bottom: 1px solid #18181b;
+    border-bottom: 1px solid #fff;
     padding-bottom: 2vw;
   }
   .sideBar ul li:last-child {
@@ -192,8 +206,8 @@ header {
     pointer-events: none;
   }
   .sideBar {
-    -webkit-backdrop-filter: blur(30px) brightness(0.7);
-    backdrop-filter: blur(30px) brightness(0.7);
+    -webkit-backdrop-filter: blur(30px) brightness(0.5);
+    backdrop-filter: blur(30px) brightness(0.5);
     transition: all 0.5s;
   }
   body.active {
